# stride

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  run_all.py
src/stride/: __init__.py  cli.py
src/stride/stages/: __init__.py  classification.py  decision_analysis.py  gait_extraction.py  gait_filtering.py  gait_lmm.py  pose_inference.py  roi_inference.py  run_gait_extraction.py  run_inference.py  run_tmaze.py  slp_to_yaml.py
src/stride/utils/: __init__.py
